# rag_restaurants_provider

./: .env.example  .gitignore  README.md  TECHNICAL_DOC.md  pyproject.toml  requirements.txt
data/processed/: menu_dishes.jsonl
data/processed/index/: documents.jsonl  embed_config.json  faiss.index
runs/run_001/: eval_report.json  predictions.csv
runs/run_004/: eval_report.json  predictions.csv
scripts/: debug_easy.py  debug_llm_reasoning.py  debug_title_selection.py  generate_easy_diagnostics.py  smoke_titles.py
src/: __init__.py  cli.py  config.py
src/eval/: metrics.py  run_eval.py
src/ingest/: build_index.py  chunker.py  menu_parser.py  pdf_loader.py
src/rag/: bm25_retriever.py  easy_query_parser.py  llm.py  pipeline.py  prompts.py  retriever.py
src/utils/: io.py  logging.py  text.py
